# big_proj

./: .env_template  README.md  pyproject.toml
src/: __init__.py  main.py  reports.py  services.py  user_settings.py  views.py
src/utils/: api_client.py  xlsx_reader.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
