
[tool.poetry]
name = "bank-project"
version = "0.1.0"
description = "Анализ банковских транзакций"
authors = ["SkyPro Student"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
requests = "^2.31.0"
openpyxl = "^3.1.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.10.0"
pydocstyle = "^6.3.0"
pytest = "^8.2.0"
pandas-stubs = "^2.2.3.250527"
types-requests = "^2.32.0.20250515"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
